New icons and fixed formatting